--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:600&family=Work%20Sans:300,500&display=swap" rel="stylesheet">
+    <title>Jammming</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
